# multi-repo-automation

./: .bandit.yaml  .pre-commit-config.yaml  .prospector.yaml  1  2  3  README.md  add-pre-commit-hooks  pyproject.toml
.git_/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  REBASE_HEAD  config  index  packed-refs
.git_/hooks/: pre-commit  pre-rebase.sample
.git_/info/: refs
.git_/logs/: HEAD
.git_/logs/refs/: stash
.git_/logs/refs/heads/: add  add-delete  avoid-loop  c2cciutils-upgrade  fix  fix-changelog  fix-repo  fix2  master  new  pre-commit  prospector-profile  renovate-config  small  small2  timeout  update-python  update-ubuntu-master  upgrade-python  wrong-file  yaml
.git_/logs/refs/heads/renovate/: all-minor-versions  ci-dependencies  lock-file-maintenance  patch-all-patch-versions
.git_/logs/refs/remotes/origin/: fix  master  new  wrong-file
.git_/logs/refs/remotes/origin/renovate/: ci-dependencies
.git_/objects/info/: commit-graph  packs
.git_/objects/pack/: pack-888b86412dbc873f4c0c5b21b1602d9dd51b2456.idx  pack-888b86412dbc873f4c0c5b21b1602d9dd51b2456.pack
.git_/refs/: stash
.git_/refs/heads/: add  add-delete  avoid-loop  fix-changelog  fix-repo  new  pre-commit  prospector-profile  renovate-config  small  small2  timeout  update-python  update-ubuntu-master  upgrade-python  yaml
.git_/refs/heads/renovate/: all-minor-versions  lock-file-maintenance  patch-all-patch-versions
.git_/refs/remotes/origin/: fix
.git_/refs/remotes/origin/renovate/: ci-dependencies
.git_/refs/tags/: 0.3.0  0.3.1  1.0.0  1.1.0  1.2.0
.github/: copilot-instructions.md  renovate.json5  renovate.json52
.github/workflows/: changelog.yaml  main.yaml
ci/: requirements.txt
multi_repo_automation/: .pre-commit-config.yaml  __init__.py  aio_editor.py  commented_yaml.py  editor.py  tools.py
multi_repo_automation/.github/workflows/: pull-request-automation.yaml
