[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "multi-repo-automation"
version = "0.0.0"
description = "Library for automation updates on multiple repositories."
readme = "README.md"
keywords = ["pre-commit"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = ["Stéphane Brunner <stephane.brunner@gmail.com>"]
repository = "https://github.com/sbrunner/multi-repo-automation"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
PyYAML = "6.0.2"
requests = "2.32.3"
"ruamel.yaml" = "0.18.10"
identify = "2.6.8"
tomlkit = "0.13.2"
json5 = "0.10.0"
configupdater = "3.2"
security_md = "1.0.0"
typing-extensions = "4.12.2"
packaging = "24.2"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.16.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
types-PyYAML = "6.0.12.20241230"
types-requests = "2.32.0.20250301"
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.22.3"

[tool.poetry.scripts]
mra-yaml = "multi_repo_automation.commented_yaml:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"
