[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
PyYAML = "6.0.2"
requests = "2.32.3"
"ruamel.yaml" = "0.18.12"
identify = "2.6.12"
tomlkit = "0.13.2"
json5 = "0.12.0"
configupdater = "3.2"
security_md = "1.0.0"
typing-extensions = "4.13.2"
packaging = "25.0"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
types-PyYAML = "6.0.12.20250516"
types-requests = "2.32.0.20250515"
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.22.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "multi-repo-automation"
description = "Library for automation updates on multiple repositories."
readme = "README.md"
keywords = ["pre-commit"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
requires-python = ">=3.9"
dependencies = ["PyYAML", "requests", "ruamel.yaml", "identify", "tomlkit", "json5", "configupdater", "security_md", "typing-extensions", "packaging"]

[project.urls]
repository = "https://github.com/sbrunner/multi-repo-automation"
"Bug Tracker" = "https://github.com/sbrunner/multi-repo-automation/issues"

[project.scripts]
mra-yaml = "multi_repo_automation.commented_yaml:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
